<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="poids">Poids:</string>
    <string name="taille">Taille:</string>
    <string name="metres">Metres</string>
    <string name="centimetres">Centimetres</string>
    <string name="mega_function">Mega Fonction</string>

</resources>
